--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Html Basic Pratice Suited</title>
-    </head>
-    <body>
-        <p>Lorem ipsum dolor, <br>sit amet consectetur adipisicing elit. <br>Fugiat quidem, aspernatur delectus voluptatem eaque, numquam in neque vel illo esse cupiditate unde aliquam, sit optio incidunt veritatis vitae deserunt quam!</p>
-        <p>New Line Paragraph</p>
-        <pre>This is 
-            super 
-                legal
-        </pre>
-        <p>Nested element inside p <strong>it is cool feature right</strong></p>
-        <strong>This is string but able to contain p <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque reiciendis, possimus excepturi facilis cumque quisquam maiores odit officiis incidunt enim dignissimos, tempore culpa ipsam aliquam deserunt assumenda. Dolore, obcaecati repudiandae.</p></strong>
-        <p>Extra space inside &nbsp;&nbsp; the Paragraph</p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Headings</title>
+</head>
+<body>
+    <h1>This is heading 1 and it is block level element</h1>
+    <h2>To proove this is block level elements edited </h2>
+</body>
 </html>
